# persistent-claude-code

./: .gitignore  LICENSE  Makefile  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: release.yml
changelog/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md
data/: io.github.seulsale.PersistentClaudeCode.desktop
docs/superpowers/plans/: 2026-04-18-persistent-claude-code-v1.md
docs/superpowers/specs/: 2026-04-18-persistent-claude-code-v1-design.md
packaging/aur/: .SRCINFO  PKGBUILD
src/persistent_claude_code/: __main__.py  app.py  browser.py  claude_binary.py  config.py  main.py  sessions.py  sidebar.py  status.py  tab.py  terminal.py
tests/: test_claude_binary.py  test_config.py  test_sessions.py  test_status.py
